--- a/src/index.html
+++ b/src/index.html
@@ -28,47 +28,53 @@
 <body>
 <main>
 	<section class="hero">
+		<div class="particle-bg">
 				<div class="line-wrap">	
 					<img src="img/hero/particle-back.png" data-speed="15"class="line line-bg">
 					<img src="img/hero/particle-middle.png" data-speed="10"class="line line-1">
 					<img src="img/hero/particle-main.png" data-speed="20"class="line line-2">
 				</div>
-					<div class="dot-position dot-position-one">
-						<div class="dot">
+					<div class="dot-one">
+						<div class="dot-wrap">
+							<div class="dot"></div>
 							<h1 class="dot-description">Банкротство</h1>
-							<p class="dot-description__bank fade">
-									Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста
-							</p>
 						</div>
+						<p class="dot-description__bank fade">
+								Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста
+						</p>
 					</div>
-					<div class="dot-position dot-position-two">
-						<div class="dot">
+					<div class="dot-two">
+						<div class="dot-wrap">
+							<div class="dot"></div>
 							<h1 class="dot-description">Взыскание долгов</h1>
-							<p class="dot-description__debt fade dot-description__left">
-									Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста
-							</p>
 						</div>
+						<p class="dot-description__debt fade dot-description__left">
+								Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста
+						</p>
 					</div>
-					<div class="dot-position dot-position-three">
-						<div class="dot">
+					<div class="dot-three">
+						<div class="dot-wrap">
+							<div class="dot"></div>
 							<h1 class="dot-description">Ликвидация</h1>
-							<p class="dot-description__delete fade dot-description__left">
-									Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста
-							</p>
 						</div>
+						<p class="dot-description__delete fade dot-description__left">
+								Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста
+						</p>
 					</div>
-					<div class="dot-position dot-position-four">
-						<div class="dot">
+					<div class="dot-four">
+						<div class="dot-wrap">
+							<div class="dot"></div>
 							<h1 class="dot-description">Выкуп долгов</h1>
-							<p class="dot-description__buy fade">
-									Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста
-							</p>
 						</div>
+						<p class="dot-description__buy fade">
+								Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста
+						</p>
 					</div>
-				<div class="callback">
-					<p class="callback-text">Мы перезвоним</p>
-					<img class="callback-arrow" src="img/hero/vectors/Arrow.png" alt="">
-				</div>
+		</div>
+		<div class="callback">
+			<p class="callback-text">Мы перезвоним</p>
+			<img class="callback-arrow" src="img/hero/vectors/Arrow.png" alt="">
+		</div>
 		<div class="container">
 			<nav class="page-title">
 				<div class="page-title-wrap">
@@ -111,13 +117,37 @@
 				</a>
 			</div>
 		</div>
-		<div class="modal fade">
+		<div class="modal policy">
 			<div class="modal-nopadding">
 			<div class="modal-wrap">
 				<div class="modal-header">
 					<img class="modal-arrow modal-arrow__close" src="img/hero/vectors/arrow-left.png" alt="">	
 					<h1 class="modal-title">
 						Политика конфиденцильности и пользовательское соглашение
+					</h1>
+				</div>
+				<div class="modal-main">
+					<p class="modal-text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия. По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.
+					Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия. По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.
+					Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия. По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.
+					Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия. По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.
+					</p>
+				</div>
+					<div class="modal-footer">
+						<div class="modal-footer__block modal-arrow__close">
+							<img class="modal-footer__arrow " src="img/hero/vectors/arrow-left.png" alt=""><p class="modal-footer__text">К списку</p>
+					</div>
+				</div>
+		</div>
+		</div>
+	</div>
+	<div class="modal company">
+			<div class="modal-nopadding">
+			<div class="modal-wrap">
+				<div class="modal-header">
+					<img class="modal-arrow modal-arrow__close" src="img/hero/vectors/arrow-left.png" alt="">	
+					<h1 class="modal-title">
+						О компании
 					</h1>
 				</div>
 				<div class="modal-main">
