--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,46 @@
 <body>
 <main>
 	<section class="hero">
+		<div class="container">
+			<div class="page-title">
+				<div class="page-title-wrap">
+					<a href="#"><h1 class="page-title__name">Долговед</h1></a>
+					<p class="page-title__subtitle">Искусство управления долгами</p>
+				</div>
+			</div>
+			<div class="contacts">
+				<div class="contacts-item">
+					<img src="img/hero/contacts/phone.png" alt="">
+					<p class="contacts-item__info">+7 (495) 374–66–55</p>
+				</div>
+				<div class="contacts-item">
+					<img src="img/hero/contacts/phone.png" alt="">
+					<p class="contacts-item__info">+7 (8452) 74–66–55 </p>
+				</div>
+				<div class="contacts-item">
+					<img class="contacts-item__message" src="img/hero/contacts/message.png" alt="">
+					<p class="contacts-item__info">info@dolgoved.ru</p>
+				</div>				
+			</div>
+			<div class="links-slider">
+					<div class="links-slide">01 о компании</div>
+					<div class="links-slide">02 услуги</div>
+					<div class="links-slide">03 контакты</div>
+			</div>
+		</div>
+		<div class="callback">
+			<p class="callback-text">Мы перезвоним</p>
+			<img class="callback-arrow" src="img/hero/vectors/Arrow.png" alt="">
+		</div>
 		<div class="particle-bg">
 				<div class="line-wrap">	
 					<img src="img/hero/particle-back.png" data-speed="15"class="line line-bg">
 					<img src="img/hero/particle-middle.png" data-speed="10"class="line line-1">
 					<img src="img/hero/particle-main.png" data-speed="20"class="line line-2">
-				</div>
-					<div class="dot-one">
+				</div>	
+		</div>
+		<div class="particle-dots">
+				<div class="dot-one">
 						<div class="dot-wrap">
 							<div class="dot"></div>
 							<h1 class="dot-description">Банкротство</h1>
@@ -71,36 +104,8 @@
 						</p>
 					</div>
 		</div>
-		<div class="callback">
-			<p class="callback-text">Мы перезвоним</p>
-			<img class="callback-arrow" src="img/hero/vectors/Arrow.png" alt="">
-		</div>
+		<footer>
 		<div class="container">
-			<nav class="page-title">
-				<div class="page-title-wrap">
-					<a href="#"><h1 class="page-title__name">Долговед</h1></a>
-					<p class="page-title-subtitle">Искусство управления долгами</p>
-				</div>
-			</nav>
-			<div class="contacts">
-				<div class="contacts-item">
-					<img src="img/hero/contacts/phone.png" alt="">
-					<p class="contacts-item__info">+7 (495) 374–66–55</p>
-				</div>
-				<div class="contacts-item">
-					<img src="img/hero/contacts/phone.png" alt="">
-					<p class="contacts-item__info">+7 (8452) 74–66–55 </p>
-				</div>
-				<div class="contacts-item">
-					<img class="contacts-item__message" src="img/hero/contacts/message.png" alt="">
-					<p class="contacts-item__info">info@dolgoved.ru</p>
-				</div>				
-			</div>
-			<div class="links-slider">
-					<div class="links-slide">01 о компании</div>
-					<div class="links-slide">02 услуги</div>
-					<div class="links-slide">03 контакты</div>
-			</div>
 			<div class="hero-footer">
 				<div class="hero-footer-rights">
 						<p class="hero-footer-right__text">©2019 Долговед</p>
@@ -117,6 +122,7 @@
 				</a>
 			</div>
 		</div>
+	</footer>
 		<div class="modal policy">
 			<div class="modal-nopadding">
 			<div class="modal-wrap">
