--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 			</div>
 			<div class="links-slider">
 					<div class="links-slide modal-info" data-title="О компании" data-content="Сайт рыбатекст поможет дизайнеру.">01 о компании</div>
-					<div class="links-slide">02 услуги</div>
+					<div class="links-slide modal-hide-services">02 услуги</div>
 					<div class="links-slide modal-contacts" data-title="Контакты" data-content="Сайт рыбатекст поможет дизайнеру.">03 контакты</div>
 			</div>
 		</div>
