--- a/src/index.html
+++ b/src/index.html
@@ -124,120 +124,122 @@
 			</div>
 		</div>
 	</footer>
-		<div class="modal">
-			<div class="modal-nopadding">
-				<div class="modal-wrap">
-					<div class="modal-header">
-						<img class="modal-arrow modal-arrow__close" src="img/hero/vectors/arrow-left.png" alt="">	
-						<h1 class="modal-title">Заголовок</h1>
-					</div>
-					<div class="modal-main">
-						<p class="modal-text">Здесь будет текст</p>
-					</div>
-						<div class="modal-footer">
-							<div class="modal-footer__block modal-arrow__close">
-								<img class="modal-footer__arrow " src="img/hero/vectors/arrow-left.png" alt=""><p class="modal-footer__text">К списку</p>
-						</div>
+		
+	</section>	
+	<div class="modal modal-window">
+		<div class="modal-nopadding">
+			<div class="modal-wrap">
+				<div class="modal-header">
+					<img class="modal-arrow modal-arrow__close" src="img/hero/vectors/arrow-left.png" alt="">	
+					<h1 class="modal-title">Заголовок</h1>
+				</div>
+				<div class="modal-main">
+					<p class="modal-text">Здесь будет текст</p>
+				</div>
+					<div class="modal-footer">
+						<div class="modal-footer__block modal-arrow__close">
+							<img class="modal-footer__arrow " src="img/hero/vectors/arrow-left.png" alt=""><p class="modal-footer__text">К списку</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="modal-contacts-window">
-			<div class="modal-nopadding">
-				<div class="modal-wrap">
-					<div class="modal-header">
-						<img class="modal-arrow modal-contacts__close" src="img/hero/vectors/arrow-left.png" alt="">	
-						<h1 class="modal-title">Контакты</h1>
-					</div>
-					<div class="modal-main">
-							<div class="contacts">
-									<div class="contacts-item">
-										<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-										<p class="contacts-item__info">+7 (495) 374–66–55</p>
-									</div>
-									<div class="contacts-item">
-										<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-										<p class="contacts-item__info">+7 (8452) 74–66–55 </p>
-									</div>
-									<div class="contacts-item">
-										<img class="contacts-item__message contacts-item__image" src="img/hero/contacts/message.png" alt="">
-										<p class="contacts-item__info">info@dolgoved.ru</p>
-									</div>				
+	</div>
+	<div class="modal-contacts-window modal-window">
+		<div class="modal-nopadding">
+			<div class="modal-wrap">
+				<div class="modal-header">
+					<img class="modal-arrow modal-contacts__close" src="img/hero/vectors/arrow-left.png" alt="">	
+					<h1 class="modal-title">Контакты</h1>
+				</div>
+				<div class="modal-main">
+						<div class="contacts">
+								<div class="contacts-item">
+									<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
+									<p class="contacts-item__info">+7 (495) 374–66–55</p>
 								</div>
-								<div class="contacts-map">
-									<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A620846f27cf62b0a71a587efe57c41733c6e2507ba717f27b247f25c70dbbe8b&amp;width=100%25&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
+								<div class="contacts-item">
+									<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
+									<p class="contacts-item__info">+7 (8452) 74–66–55 </p>
 								</div>
-					</div>
-						<div class="modal-footer">
-							<div class="modal-footer__block modal-contacts__close">
-								<img class="modal-footer__arrow " src="img/hero/vectors/arrow-left.png" alt=""><p class="modal-footer__text">К списку</p>
-						</div>
+								<div class="contacts-item">
+									<img class="contacts-item__message contacts-item__image" src="img/hero/contacts/message.png" alt="">
+									<p class="contacts-item__info">info@dolgoved.ru</p>
+								</div>				
+							</div>
+							<div class="contacts-map">
+								<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A620846f27cf62b0a71a587efe57c41733c6e2507ba717f27b247f25c70dbbe8b&amp;width=100%25&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
+							</div>
+				</div>
+					<div class="modal-footer">
+						<div class="modal-footer__block modal-contacts__close">
+							<img class="modal-footer__arrow " src="img/hero/vectors/arrow-left.png" alt=""><p class="modal-footer__text">К списку</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="service-modal">
-			<div class="service-modal-nopadding">
-				<div class="service-modal-wrap">
-					<div class="service-modal-header">
-						<img class="service-modal-arrow service-modal-arrow__close" src="img/hero/vectors/arrow-left.png" alt="">	
-						<h1 class="service-modal-title">Заголовок</h1>
-					</div>
-					<div class="service-modal-main">
-						<p class="service-modal-text">Здесь будет текст</p>
-					</div>
+	</div>
+	<div class="service-modal modal-window">
+		<div class="service-modal-nopadding">
+			<div class="service-modal-wrap">
+				<div class="service-modal-header">
+					<img class="service-modal-arrow service-modal-arrow__close" src="img/hero/vectors/arrow-left.png" alt="">	
+					<h1 class="service-modal-title">Заголовок</h1>
 				</div>
-				<div class="service-modal-footer service-modal-offer">
-					<h1 class="service-modal-footer__title">Оставить заявку</h1>
-					<form action="" class="service-modal-footer__form">
-						<input type="text" class="service-modal-footer__input form-input" placeholder="Ваше имя">
-						<input type="text" class="service-modal-footer__input form-input" placeholder="Ваш номер телефона">
-						<input type="text" class="service-modal-footer__input form-input" placeholder="Ваш  email">
-						<button class="service-modal-footer__button form-button">Оставить  заявку</button>
-					</form>
-					<div class="service-modal-footer__answer">
-						<h1 class="service-modal-footer__title">Благодарим за заявку!</h1>
-						<p class="service-modal-footer__subtitle">Ожидайте звонка специалиста</p>
-					</div>
-					<div class="service-modal-footer__block service-modal-arrow__close">
-						<img class="modal-footer__arrow " src="img/hero/vectors/arrow-left.png" alt=""><p class="service-modal-footer__text">К списку</p>
-					</div>
+				<div class="service-modal-main">
+					<p class="service-modal-text">Здесь будет текст</p>
+				</div>
+			</div>
+			<div class="service-modal-footer service-modal-offer">
+				<h1 class="service-modal-footer__title">Оставить заявку</h1>
+				<form action="" class="service-modal-footer__form">
+					<input type="text" class="service-modal-footer__input form-input" placeholder="Ваше имя">
+					<input type="text" class="service-modal-footer__input form-input" placeholder="Ваш номер телефона">
+					<input type="text" class="service-modal-footer__input form-input" placeholder="Ваш  email">
+					<button class="service-modal-footer__button form-button">Оставить  заявку</button>
+				</form>
+				<div class="service-modal-footer__answer">
+					<h1 class="service-modal-footer__title">Благодарим за заявку!</h1>
+					<p class="service-modal-footer__subtitle">Ожидайте звонка специалиста</p>
+				</div>
+				<div class="service-modal-footer__block service-modal-arrow__close">
+					<img class="modal-footer__arrow " src="img/hero/vectors/arrow-left.png" alt=""><p class="service-modal-footer__text">К списку</p>
 				</div>
 			</div>
 		</div>
-		<div class="service-modal-debt">
-			<div class="service-modal-nopadding">
-				<div class="service-modal-wrap">
-					<div class="service-modal-header">
-						<img class="service-modal-arrow service-debt-arrow__close" src="img/hero/vectors/arrow-left.png" alt="">	
-						<h1 class="service-modal-title">Заголовок</h1>
-					</div>
-					<div class="service-modal-main">
-						<p class="service-modal-text">Здесь будет текст</p>
-					</div>
+	</div>
+	<div class="service-modal-debt modal-window">
+		<div class="service-modal-nopadding">
+			<div class="service-modal-wrap">
+				<div class="service-modal-header">
+					<img class="service-modal-arrow service-debt-arrow__close" src="img/hero/vectors/arrow-left.png" alt="">	
+					<h1 class="service-modal-title">Заголовок</h1>
 				</div>
-				<div class="service-modal-footer service-modal-offer">
-					<h1 class="service-modal-footer__title">Оставить заявку</h1>
-					<form action="" class="service-modal-footer__form">
-						<input type="text" class="service-modal-footer__input form-input" placeholder="Ваше имя">
-						<input type="text" class="service-modal-footer__input form-input" placeholder="Ваш номер телефона">
-						<input type="text" class="service-modal-footer__input form-input" placeholder="Ваш  email">
-						<button class="service-modal-footer__button form-button">Оставить  заявку</button>
-						<div class="service-modal-footer__add-file">			
-							<label for="file"><img class="service-modal-footer__attach" src="img/hero/vectors/attach.png" alt="">Прикрепить правоустанавливающие документы</label>
-							<input type="file" data-multiple-caption="{count}" name='file' multiple="multiple" id="file">
-						</div>
-					</form>
-					<div class="service-modal-footer__answer">
-						<h1 class="service-modal-footer__title">Благодарим за заявку!</h1>
-						<p class="service-modal-footer__subtitle">Ожидайте звонка специалиста</p>
+				<div class="service-modal-main">
+					<p class="service-modal-text">Здесь будет текст</p>
+				</div>
+			</div>
+			<div class="service-modal-footer service-modal-offer">
+				<h1 class="service-modal-footer__title">Оставить заявку</h1>
+				<form action="" class="service-modal-footer__form">
+					<input type="text" class="service-modal-footer__input form-input" placeholder="Ваше имя">
+					<input type="text" class="service-modal-footer__input form-input" placeholder="Ваш номер телефона">
+					<input type="text" class="service-modal-footer__input form-input" placeholder="Ваш  email">
+					<button class="service-modal-footer__button form-button">Оставить  заявку</button>
+					<div class="service-modal-footer__add-file">			
+						<label for="file"><img class="service-modal-footer__attach" src="img/hero/vectors/attach.png" alt="">Прикрепить правоустанавливающие документы</label>
+						<input type="file" data-multiple-caption="{count}" name='file' multiple="multiple" id="file">
 					</div>
-					<div class="service-modal-footer__block service-debt-arrow__close">
-						<img class="modal-footer__arrow " src="img/hero/vectors/arrow-left.png" alt=""><p class="service-modal-footer__text">К списку</p>
-					</div>
+				</form>
+				<div class="service-modal-footer__answer">
+					<h1 class="service-modal-footer__title">Благодарим за заявку!</h1>
+					<p class="service-modal-footer__subtitle">Ожидайте звонка специалиста</p>
+				</div>
+				<div class="service-modal-footer__block service-debt-arrow__close">
+					<img class="modal-footer__arrow " src="img/hero/vectors/arrow-left.png" alt=""><p class="service-modal-footer__text">К списку</p>
 				</div>
 			</div>
 		</div>
+	</div>
 	<div class="popup-callback fade">
 		<div class="popup-callback-content">
 			<img class="popup-callback-close" src="img/hero/vectors/Vector.svg" alt="close">
@@ -251,7 +253,6 @@
 					Нажимая данную кнопку вы соглашаетесь с пользовательским соглашением и политикой конфиденциальности</p>
 		</div>
 	</div>
-	</section>	
 	<section class="mobile">
 		<!--/Mobile container-->
 		<div class="mob-container">
