--- a/src/index.html
+++ b/src/index.html
@@ -492,6 +492,7 @@
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/jquery.plugin.min.js"></script>
 	<script src="js/jquery.countdown.min.js"></script> -->
-	<script src="js/scripts.js"></script>
+	<script src="js/main.js"></script>
+	<script src="js/mobile.js"></script>
 </body>
 </html>
