--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 	<!-- Title + Ancoding -->
 	<title>Долговед</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -38,16 +37,16 @@
 			<div class="contacts">
 				<div class="contacts-item">
 					<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-					<p class="contacts-item__info">+7 (495) 374–66–55</p>
+					<a href='+7 (495) 374–66–55' class="contacts-item__info">+7 (495) 374–66–55</a>
 				</div>
 				<div class="contacts-item">
 					<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-					<p class="contacts-item__info">+7 (8452) 74–66–55 </p>
+					<a href='+7 (8452) 74–66–55' class="contacts-item__info">+7 (8452) 74–66–55</a>
 				</div>
 				<div class="contacts-item">
 					<img class="contacts-item__image" class="contacts-item__message" src="img/hero/contacts/message.png" alt="">
-					<p class="contacts-item__info">info@dolgoved.ru</p>
-				</div>				
+					<a href="info@dolgoved.ru" class="contacts-item__info">info@dolgoved.ru</a>
+				</div>					
 			</div>
 			<div class="links-slider">
 					<div class="links-slide modal-info" data-title="О компании" data-content="Сайт рыбатекст поможет дизайнеру.">01 о компании</div>
@@ -153,18 +152,18 @@
 				</div>
 				<div class="modal-main">
 						<div class="contacts">
-								<div class="contacts-item">
-									<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-									<p class="contacts-item__info">+7 (495) 374–66–55</p>
-								</div>
-								<div class="contacts-item">
-									<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-									<p class="contacts-item__info">+7 (8452) 74–66–55 </p>
-								</div>
-								<div class="contacts-item">
-									<img class="contacts-item__message contacts-item__image" src="img/hero/contacts/message.png" alt="">
-									<p class="contacts-item__info">info@dolgoved.ru</p>
-								</div>				
+							<div class="contacts-item">
+								<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
+								<a href='+7 (495) 374–66–55' class="contacts-item__info">+7 (495) 374–66–55</a>
+							</div>
+							<div class="contacts-item">
+								<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
+								<a href='+7 (8452) 74–66–55' class="contacts-item__info">+7 (8452) 74–66–55</a>
+							</div>
+							<div class="contacts-item">
+								<img class="contacts-item__image contacts-item__message" src="img/hero/contacts/message.png" alt="">
+								<a href="info@dolgoved.ru" class="contacts-item__info">info@dolgoved.ru</a>
+							</div>				
 							</div>
 							<div class="contacts-map">
 								<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A620846f27cf62b0a71a587efe57c41733c6e2507ba717f27b247f25c70dbbe8b&amp;width=100%25&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
@@ -494,6 +493,5 @@
 	<script src="js/jquery.countdown.min.js"></script> -->
 	<script src="js/main.js"></script>
 	<script src="js/mobile.js"></script>
-
 </body>
 </html>
