--- a/src/index.html
+++ b/src/index.html
@@ -226,7 +226,7 @@
 					<button class="service-modal-footer__button form-button">Оставить  заявку</button>
 					<div class="service-modal-footer__add-file">			
 						<label for="file"><img class="service-modal-footer__attach" src="img/hero/vectors/attach.png" alt="">Прикрепить правоустанавливающие документы</label>
-						<input type="file" data-multiple-caption="{count}" name='file' multiple="multiple" id="file">
+						<input  class="service-modal-footer__add-file__input" type="file" data-multiple-caption="{count}" name='file' multiple="multiple" id="file">
 					</div>
 				</form>
 				<div class="service-modal-footer__answer">
@@ -382,8 +382,8 @@
 				<input type="text" class="mobile-debt-footer__input form-input" placeholder="Ваш номер телефона">
 				<input type="text" class="mobile-debt-footer__input form-input" placeholder="Ваш  email">
 				<div class="mobile-debt-footer__add-file">			
-					<label for="file"><img class="mobile-debt-footer__attach" src="img/hero/vectors/attach.png" alt="">Прикрепить правоустанавливающие документы</label>
-					<input type="file" data-multiple-caption="{count}" name='file' multiple="multiple" id="file">
+					<label for="mobile-file"><img class="mobile-debt-footer__attach" src="img/hero/vectors/attach.png" alt="">Прикрепить правоустанавливающие документы</label>
+					<input class="mobile-debt-footer__add-file__input" type="file" data-multiple-caption="{count}" name='file' multiple="multiple" id="mobile-file">
 				</div>
 				<button class="mobile-debt-footer__button form-button">Оставить  заявку</button>
 			</form>
