--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 					<div class="links-slide modal-contacts" data-title="Контакты" data-content="Сайт рыбатекст поможет дизайнеру.">03 контакты</div>
 			</div>
 		</div>
-		<div class="callback">
+		<div class="callback callback-gradient-start">
 			<p class="callback-text">Мы перезвоним</p>
 			
 			<img class="callback-arrow" src="img/hero/vectors/Arrow.png" alt="">
