--- a/src/index.html
+++ b/src/index.html
@@ -48,12 +48,12 @@
 				</div>					
 			</div>
 			<div class="links-slider">
-					<div class="links-slide modal-info" data-title="О компании" data-content="Сайт рыбатекст поможет дизайнеру.">01 о компании</div>
-					<div class="links-slide modal-hide-services">02 услуги</div>
-					<div class="links-slide modal-contacts" data-title="Контакты" data-content="Сайт рыбатекст поможет дизайнеру.">03 контакты</div>
+					<div class="links-slide modal-info" data-title="О компании" data-content="Сайт рыбатекст поможет дизайнеру.">О компании</div>
+					<div class="links-slide modal-hide-services">Услуги</div>
+					<div class="links-slide modal-contacts" data-title="Контакты" data-content="Сайт рыбатекст поможет дизайнеру.">Контакты</div>
 			</div>
 		</div>
-		<div class="callback callback-gradient-start">
+		<div class="callback">
 			<p class="callback-text">Мы перезвоним</p>
 			
 			<img class="callback-arrow" src="img/hero/vectors/Arrow.png" alt="">
@@ -66,6 +66,7 @@
 				</div>	
 		</div>
 		<div class="particle-dots">
+				
 				<div class="dot-one">
 						<div class="dot-wrap"  data-title="Банкротство" data-content="Сайт рыбатекст поможет дизайнеру.">
 							<div class="dot"></div>
@@ -102,6 +103,11 @@
 								Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста
 						</p>
 					</div>
+					<svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+						<filter id="blur">
+						<feGaussianBlur stdDeviation="6" />
+						</filter>
+					 </svg>
 		</div>
 		<footer>
 		<div class="container">
@@ -166,8 +172,8 @@
 							</div>					
 						</div>
 						<div class="contacts-map">
-								<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A620846f27cf62b0a71a587efe57c41733c6e2507ba717f27b247f25c70dbbe8b&amp;width=100%25&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
-							</div>
+							<div id="map" style="width: 100%; height:400px"></div>
+						</div>
 				</div>
 					<div class="modal-footer">
 						<div class="modal-footer__block modal-contacts__close">
@@ -460,7 +466,7 @@
 			</div>
 		</div>
 			<div class="mobile-contacts__map">
-				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A620846f27cf62b0a71a587efe57c41733c6e2507ba717f27b247f25c70dbbe8b&amp;width=100%25&amp;height=485&amp;lang=ru_RU&amp;scroll=true"></script>
+				<div id="map2" style="width: 100%; height:400px"></div>
 			</div>
 		<div class="mobile-contacts__wrap">
 			<div class="mobile-contacts-footer mobile-contacts__arrow__close">
@@ -483,12 +489,7 @@
 		<!--mobile-contacts-->
 	</div>
 </main>
-	<!-- place for plugins -->
-<!-- <script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.plugin.min.js"></script>
-	<script src="js/jquery.countdown.min.js"></script> -->
+	<script src="https://api-maps.yandex.ru/2.0/?load=package.full&lang=ru-RU"></script>
 	<script src="js/scripts.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
 
